# Falsetto

./: .gitignore  README.md  pyproject.toml
configs/: stage1_mert_fakemusiccaps.yaml  stage1_mert_fakemusiccaps_small.yaml  stage1_mert_fmc_open.yaml  stage2_fusion_aime.yaml  stage2_segment_sonics.yaml
deploy/modal/: README.md  app.py
deploy/space/: .gitattributes  DEPLOY.md  README.md  app.py  deploy.py  requirements.txt
docs/: DATASETS.md  index.html
notebooks/: train_stage1_colab.ipynb
scripts/: build_demo.py  build_manifest.py  build_sequences.py  build_site_data.py  check_env.py  demo.py  download_data.py  extract_embeddings.py  smoke_utils.py  train_stage1.py  train_stage2.py
src/falsetto/: __init__.py  cli.py
src/falsetto/config/: __init__.py  io.py  schema.py
src/falsetto/data/: __init__.py  audio.py  augment.py  beat.py  cache.py  datasets.py  manifests.py  segment_bars.py  segment_fixed.py  segment_sequence.py
src/falsetto/demo/: __init__.py  assets.py  pipeline.py  plots.py  realmusic.py  studio.py  synth.py
src/falsetto/eval/: __init__.py  ablations.py  compare.py  gate_viz.py  significance.py  table_stage1.py
src/falsetto/extractors/: __init__.py  base.py  fxencoder.py  hf_ssl.py  mert.py  muffin.py  music2vec.py  wav2vec2.py
src/falsetto/inference/: __init__.py  predict.py
src/falsetto/models/: __init__.py  audiocat.py  common.py  fx_segment.py  segment_transformer.py  ssm.py  stage1.py
src/falsetto/models/fusion/: __init__.py  cross_attention.py  embedding_stream.py  fusion_segment_transformer.py  gate.py  ssm_stream.py
src/falsetto/training/: __init__.py  losses.py  metrics.py  train_stage1.py  train_stage2.py
src/falsetto/utils/: __init__.py  audio_io.py  device.py  logging.py  seed.py
tests/: test_config.py  test_data_pipeline.py  test_demo.py  test_eval_analysis.py  test_eval_table.py  test_extractors.py  test_inference_cli.py  test_stage1_models.py  test_stage2.py  test_train_stage1_e2e.py
