[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falsetto"
version = "0.1.0"
description = "AI-generated music detection via musical structure (Segment Transformer reimplementation)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Arnav Mahadev" }]
keywords = ["audio", "deepfake", "music", "ai-detection", "transformer"]

# Pinned with lower bounds known-good on Python 3.11 + Apple Silicon (MPS) / CUDA.
# torch does not yet ship wheels for Python 3.14, hence the <3.13 cap above.
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "huggingface_hub>=0.23",
    "librosa>=0.10.1",
    "soundfile>=0.12",
    "numpy>=1.24,<2.2",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "einops>=0.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
# Weights & Biases as an alternative tracker to the default TensorBoard.
wandb = ["wandb>=0.16"]
# Enables MERT's optional CQT feature branch (otherwise it warns and skips it).
mert = ["nnAudio>=0.3"]
# Beat tracking (Phase 4). Kept optional so Phase 0-3 install stays light.
beat = ["beat_this @ git+https://github.com/CPJKU/beat_this.git"]
# Interactive demo (Phase 7) — FALSETTO Studio.
demo = ["gradio>=4.0", "nnAudio>=0.3"]
# Parquet manifests.
parquet = ["pyarrow>=14.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
falsetto = "falsetto.cli:main"

[project.urls]
Homepage = "https://github.com/arnavmahadev/Falsetto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["falsetto*"]

[tool.setuptools.package-data]
falsetto = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
